tests/health/tests__and_or_test_force.toit.gold
tests/and_or_test_force.toit:15:13: error: Logical operation argument can't be 'none'
  a2 = a or unreachable
            ^~~~~~~~~~~
